--- a/002_invoices.html
+++ b/002_invoices.html
@@ -4,10 +4,325 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>納品書・請求明細書作成</title>
+  <title>請求書・請求明細書作成</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
 <body>
+  <header class="p-3 text-white" style="background-color: mediumvioletred;">
+    <div class="container-fluid">
+      <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+        <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
+          <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"></use></svg>
+        </a>
+
+        <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+          <li><a href="#" class="nav-link px-2 text-white">ホーム</a></li>
+          <li><a href="#" class="nav-link px-2 text-white">見積</a></li>
+        </ul>
+        <div class="text-end">
+          <button type="button" class="btn btn-outline-light me-2">account</button>
+        </div>
+      </div>
+    </div>
+  </header>
+  <main class="" style="background-color: lavenderblush;">
+    <h3 class="p-3 bg-white">請求書・請求明細書作成</h3>
+    <div class="container-fluid" style="">
+      <div class="p-3 bg-white rounded">
+        <div class="container" style="">
+          <form>
+            <table class="table table-bordered">
+              <tr>
+                <th class="col-md-2">部門</th>
+                <td class="col-md-2">4023</td>
+                <td class="col-md-4">ソリューション事業本部</td>
+                <td class="col-md-4">関東支店</td>
+              </tr>
+              <tr>
+                <th class="col-md-2">担当者</th>
+                <td class="col-md-2">002021</td>
+                <td colspan="2">ヤマダタロウ</td>
+              </tr>
+            </table>
+  
+            <!-- 納品書スタイル設定 -->
+            <div class="mt-5">
+              <div class="h5">納品書スタイル設定</div>
+              <table class="table table-borderless">
+                <tr>
+                  <td class="border col-md-2 align-middle">窓付封書の選択</td>
+                  <td class="border-top border-end border-bottom col-md-2">&nbsp;</td>
+                  <td class="col-md-8">
+                    客先(契約先)　住所記載　
+                    <div class="btn-group">
+                      <input type="radio" class="btn-check" name="windowsSealedEnvelope" id="windowsSealedEnvelopeOn" autocomplete="on">
+                      <label for="windowsSealedEnvelopeOn" class="btn btn-outline-secondary">1:有</label>
+                      <input type="radio" class="btn-check" name="windowsSealedEnvelope" id="windowsSealedEnvelopeOff" autocomplete="off">
+                      <label for="windowsSealedEnvelopeOff" class="btn btn-outline-secondary">2:無</label>
+                    </div>
+                  </td>
+                </tr>
+                <tr>
+                  <td class="border col-md-2 align-middle">品名記載事項変更</td>
+                  <td class="border-top border-end border-bottom col-md-2">&nbsp;</td>
+                  <td class="col-md-8">
+                    <div class="btn-group">
+                      <input type="radio" class="btn-check" name="changeItemDesc" id="changeItemDesc1" autocomplete="on">
+                      <label for="changeItemDesc1" class="btn btn-outline-secondary">1:お見積番号記載</label>
+                      <input type="radio" class="btn-check" name="changeItemDesc" id="changeItemDesc2" autocomplete="off">
+                      <label for="changeItemDesc2" class="btn btn-outline-secondary">2:詳細参照</label>
+                      <input type="radio" class="btn-check" name="changeItemDesc" id="changeItemDesc3" autocomplete="off">
+                      <label for="changeItemDesc3" class="btn btn-outline-secondary">3:記載なし</label>
+                      <input type="radio" class="btn-check" name="changeItemDesc" id="changeItemDesc4" autocomplete="off">
+                      <label for="changeItemDesc4" class="btn btn-outline-secondary">4:明細事項記載(一括請求時のみ)</label>
+                    </div>
+                  </td>
+                </tr>
+                <tr>
+                  <td class="border col-md-2 align-middle">消費税入力</td>
+                  <td class="border-top border-end border-bottom col-md-2">&nbsp;</td>
+                  <td class="col-md-8">
+                    <div class="btn-group">
+                      <input type="radio" class="btn-check" name="salesTaxEntry" id="salesTaxEntryOn" autocomplete="on">
+                      <label for="salesTaxEntryOn" class="btn btn-outline-secondary">1:有</label>
+                      <input type="radio" class="btn-check" name="salesTaxEntry" id="salesTaxEntryOff" autocomplete="off">
+                      <label for="salesTaxEntryOff" class="btn btn-outline-secondary">2:無</label>
+                    </div>
+                  </td>
+                </tr>
+                <tr>
+                  <td class="border col-md-2 align-middle">消費税加筆事項</td>
+                  <td class="border-top border-end border-bottom col-md-2">&nbsp;</td>
+                  <td class="col-md-8">
+                    <div class="btn-group">
+                      <input type="radio" class="btn-check" name="salesTaxAdditions" id="salesTaxAdditionsOn" autocomplete="on">
+                      <label for="salesTaxAdditionsOn" class="btn btn-outline-secondary">1:有</label>
+                      <input type="radio" class="btn-check" name="salesTaxAdditions" id="salesTaxAdditionsOff" autocomplete="off">
+                      <label for="salesTaxAdditionsOff" class="btn btn-outline-secondary">2:無</label>
+                    </div>
+                    　※本金額には、消費税は含まれておりません。請求時には、消費税相当額を加算させて頂きます。
+                  </td>
+                </tr>
+              </table>              
+            </div>
+  
+            <!-- 請求書スタイル設定 -->
+            <div class="mt-5">
+              <div class="h5">請求書スタイル設定</div>
+              <table class="table table-borderless">
+                <tr>
+                  <td class="border col-md-2 align-middle">窓付封書の選択</td>
+                  <td class="border-top border-end border-bottom col-md-2">&nbsp;</td>
+                  <td class="col-md-8">
+                    客先(契約先)　住所記載　
+                    <div class="btn-group">
+                      <input type="radio" class="btn-check" name="windowsSealedEnvelope" id="windowsSealedEnvelopeOn" autocomplete="on">
+                      <label for="windowsSealedEnvelopeOn" class="btn btn-outline-secondary">1:有</label>
+                      <input type="radio" class="btn-check" name="windowsSealedEnvelope" id="windowsSealedEnvelopeOff" autocomplete="off">
+                      <label for="windowsSealedEnvelopeOff" class="btn btn-outline-secondary">2:無</label>
+                    </div>
+                  </td>
+                </tr>
+                <tr>
+                  <td class="border col-md-2 align-middle">品名記載事項変更</td>
+                  <td class="border-top border-end border-bottom col-md-2">&nbsp;</td>
+                  <td class="col-md-8">
+                    <div class="btn-group">
+                      <input type="radio" class="btn-check" name="changeItemDesc" id="changeItemDesc1" autocomplete="on">
+                      <label for="changeItemDesc1" class="btn btn-outline-secondary">1:お見積番号記載</label>
+                      <input type="radio" class="btn-check" name="changeItemDesc" id="changeItemDesc2" autocomplete="off">
+                      <label for="changeItemDesc2" class="btn btn-outline-secondary">2:詳細参照</label>
+                      <input type="radio" class="btn-check" name="changeItemDesc" id="changeItemDesc3" autocomplete="off">
+                      <label for="changeItemDesc3" class="btn btn-outline-secondary">3:記載なし</label>
+                      <input type="radio" class="btn-check" name="changeItemDesc" id="changeItemDesc4" autocomplete="off">
+                      <label for="changeItemDesc4" class="btn btn-outline-secondary">4:明細事項記載(一括請求時のみ)</label>
+                    </div>
+                  </td>
+                </tr>
+                <tr>
+                  <td class="border col-md-2 align-middle">消費税入力</td>
+                  <td class="border-top border-end border-bottom col-md-2">&nbsp;</td>
+                  <td class="col-md-8">
+                    <div class="btn-group">
+                      <input type="radio" class="btn-check" name="salesTaxEntry" id="salesTaxEntryOn" autocomplete="on">
+                      <label for="salesTaxEntryOn" class="btn btn-outline-secondary">1:有</label>
+                      <input type="radio" class="btn-check" name="salesTaxEntry" id="salesTaxEntryOff" autocomplete="off">
+                      <label for="salesTaxEntryOff" class="btn btn-outline-secondary">2:無</label>
+                    </div>
+                  </td>
+                </tr>
+                <tr>
+                  <td class="border col-md-2 align-middle">消費税加筆事項</td>
+                  <td class="border-top border-end border-bottom col-md-2">&nbsp;</td>
+                  <td class="col-md-8">
+                    <div class="btn-group">
+                      <input type="radio" class="btn-check" name="salesTaxAdditions" id="salesTaxAdditionsOn" autocomplete="on">
+                      <label for="salesTaxAdditionsOn" class="btn btn-outline-secondary">1:有</label>
+                      <input type="radio" class="btn-check" name="salesTaxAdditions" id="salesTaxAdditionsOff" autocomplete="off">
+                      <label for="salesTaxAdditionsOff" class="btn btn-outline-secondary">2:無</label>
+                    </div>
+                    　※本金額には、消費税は含まれておりません。請求時には、消費税相当額を加算させて頂きます。
+                  </td>
+                </tr>
+              </table>
+              <!--
+              <div>
+                <div class="row">
+                  <div class="col-sm-4">
+                    <div class="row">
+                      <div class="col-sm-6 border">窓付封書の選択</div>
+                      <div class="col-sm-6 border"></div>
+                    </div>
+                  </div>
+                  <div class="col-sm-8">
+                    客先(契約先)　住所記載
+                    <div class="btn-group">
+                      <input type="radio" class="btn-check" name="windowsSealedEnvelope" id="windowsSealedEnvelopeOn" autocomplete="on">
+                      <label for="windowsSealedEnvelopeOn" class="btn btn-outline-secondary">1:有</label>
+                      <input type="radio" class="btn-check" name="windowsSealedEnvelope" id="windowsSealedEnvelopeOff" autocomplete="off">
+                      <label for="windowsSealedEnvelopeOff" class="btn btn-outline-secondary">2:無</label>
+                    </div>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-sm-4">
+                    <div class="row">
+                      <div class="col-sm-6 border">品名記載事項変更</div>
+                      <div class="col-sm-6 border"></div>
+                    </div>
+                  </div>
+                  <div class="col-sm-8">
+                    <div class="btn-group">
+                      <input type="radio" class="btn-check" name="changeItemDesc" id="changeItemDesc1" autocomplete="on">
+                      <label for="changeItemDesc1" class="btn btn-outline-secondary">1:お見積番号記載</label>
+                      <input type="radio" class="btn-check" name="changeItemDesc" id="changeItemDesc2" autocomplete="off">
+                      <label for="changeItemDesc2" class="btn btn-outline-secondary">2:詳細参照</label>
+                      <input type="radio" class="btn-check" name="changeItemDesc" id="changeItemDesc3" autocomplete="off">
+                      <label for="changeItemDesc3" class="btn btn-outline-secondary">3:記載なし</label>
+                      <input type="radio" class="btn-check" name="changeItemDesc" id="changeItemDesc4" autocomplete="off">
+                      <label for="changeItemDesc4" class="btn btn-outline-secondary">4:明細事項記載(一括請求時のみ)</label>
+                    </div>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-sm-4">
+                    <div class="row">
+                      <div class="col-sm-6 border">消費税入力</div>
+                      <div class="col-sm-6 border"></div>
+                    </div>
+                  </div>
+                  <div class="col-sm-8">
+                    <div class="btn-group">
+                      <input type="radio" class="btn-check" name="salesTaxEntry" id="salesTaxEntryOn" autocomplete="on">
+                      <label for="salesTaxEntryOn" class="btn btn-outline-secondary">1:有</label>
+                      <input type="radio" class="btn-check" name="salesTaxEntry" id="salesTaxEntryOff" autocomplete="off">
+                      <label for="salesTaxEntryOff" class="btn btn-outline-secondary">2:無</label>
+                    </div>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-sm-4">
+                    <div class="row">
+                      <div class="col-sm-6 border">消費税加筆事項</div>
+                      <div class="col-sm-6 border"></div>
+                    </div>
+                  </div>
+                  <div class="col-sm-8">
+                    <div class="btn-group">
+                      <input type="radio" class="btn-check" name="salesTaxAdditions" id="salesTaxAdditionsOn" autocomplete="on">
+                      <label for="salesTaxAdditionsOn" class="btn btn-outline-secondary">1:有</label>
+                      <input type="radio" class="btn-check" name="salesTaxAdditions" id="salesTaxAdditionsOff" autocomplete="off">
+                      <label for="salesTaxAdditionsOff" class="btn btn-outline-secondary">2:無</label>
+                    </div>
+                  </div>
+                </div>
+              </div>-->
+            </div>
+
+            <hr class="my-4">
+            <table class="table table-striped table-bordered">
+              <thead>
+                <th class="text-center">選択</th>
+                <th class="text-center">取引銀行名</th>
+                <th class="text-center">支店名</th>
+                <th class="text-center">種目</th>
+                <th class="text-center">口座名義名</th>
+                <th class="text-center">口座番号</th>
+                <th class="text-center">&nbsp;</th>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>
+                    <div class="form-check">
+                      <input class="form-check-input" type="radio" name="bank" id="">
+                    </div>
+                  </td>
+                  <td>みずほ銀行</td>
+                  <td>深川支店</td>
+                  <td>普通</td>
+                  <td>株式会社前川製作所</td>
+                  <td>1817659</td>
+                  <td>本社代表(共通)口座</td>
+                </tr>
+                <tr>
+                  <td>
+                    <div class="form-check">
+                      <input class="form-check-input" type="radio" name="bank" id="">
+                    </div>
+                  </td>
+                  <td>三井住友銀行</td>
+                  <td>東京中央支店</td>
+                  <td>普通</td>
+                  <td>株式会社前川製作所</td>
+                  <td>8057265</td>
+                  <td>&nbsp;</td>
+                </tr>
+                <tr>
+                  <td>
+                    <div class="form-check">
+                      <input class="form-check-input" type="radio" name="bank" id="">
+                    </div>
+                  </td>
+                  <td>三菱UFJ銀行</td>
+                  <td>門前仲町支店</td>
+                  <td>普通</td>
+                  <td>株式会社前川製作所</td>
+                  <td>1176125</td>
+                  <td>&nbsp;</td>
+                </tr>
+                <tr>
+                  <td>
+                    <div class="form-check">
+                      <input class="form-check-input" type="radio" name="bank" id="">
+                    </div>
+                  </td>
+                  <td>みずほ銀行</td>
+                  <td>第四集中支店</td>
+                  <td>普通</td>
+                  <td>株式会社前川製作所</td>
+                  <td>1331026</td>
+                  <td>関東バーチャル口座</td>
+                </tr>
+                <tr>
+                  <td>
+                    <div class="form-check">
+                      <input class="form-check-input" type="radio" name="bank" id="">
+                    </div>
+                  </td>
+                  <td>みずほ銀行</td>
+                  <td>第四集中支店</td>
+                  <td>普通</td>
+                  <td>株式会社前川製作所</td>
+                  <td>1331085</td>
+                  <td>守谷バーチャル口座</td>
+                </tr>
+              </tbody>
+            </table>
+          </form>
+        </div>
+      </div>
+    </div>
+  </main>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
 </html>
