--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
   <main>
-    <a href="./001_order-search.html">受注検索</a>
+    <a href="./001_order-search.html">受注検索</a><br>
+    <a href="./002_invoices.html">請求書・請求明細書作成(1)</a><br>
+    <a href="./003_invoices.html">請求書・請求明細書作成(2)</a><br>
   </main>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
