--- a/002_invoices.html
+++ b/002_invoices.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>請求書・請求明細書作成</title>
+  <title>納品書・請求明細書作成</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
 <body>
@@ -26,22 +26,23 @@
     </div>
   </header>
   <main class="" style="background-color: lavenderblush;">
-    <h3 class="p-3 bg-white">請求書・請求明細書作成</h3>
+    <h3 class="p-3 bg-white">納品書・請求明細書作成</h3>
     <div class="container-fluid" style="">
       <div class="p-3 bg-white rounded">
         <div class="container" style="">
           <form>
-            <table class="table table-bordered">
+            <table class="table table-borderless">
               <tr>
-                <th class="col-md-2">部門</th>
-                <td class="col-md-2">4023</td>
-                <td class="col-md-4">ソリューション事業本部</td>
-                <td class="col-md-4">関東支店</td>
+                <th style="width: 12rem;">部門番号</th>
+                <td>4023</td>
               </tr>
               <tr>
-                <th class="col-md-2">担当者</th>
-                <td class="col-md-2">002021</td>
-                <td colspan="2">ヤマダタロウ</td>
+                <th style="width: 12rem;">部門名</th>
+                <td>ソリューション事業本部　関東支店</td>
+              </tr>
+              <tr>
+                <th style="width: 12rem;">担当者</th>
+                <td>002021　ヤマダタロウ</td>
               </tr>
             </table>
   
@@ -50,9 +51,8 @@
               <div class="h5">納品書スタイル設定</div>
               <table class="table table-borderless">
                 <tr>
-                  <td class="border col-md-2 align-middle">窓付封書の選択</td>
-                  <td class="border-top border-end border-bottom col-md-2">&nbsp;</td>
-                  <td class="col-md-8">
+                  <th class="align-middle">窓付封書の選択</th>
+                  <td>
                     客先(契約先)　住所記載　
                     <div class="btn-group">
                       <input type="radio" class="btn-check" name="windowsSealedEnvelope" id="windowsSealedEnvelopeOn" autocomplete="on">
@@ -63,9 +63,8 @@
                   </td>
                 </tr>
                 <tr>
-                  <td class="border col-md-2 align-middle">品名記載事項変更</td>
-                  <td class="border-top border-end border-bottom col-md-2">&nbsp;</td>
-                  <td class="col-md-8">
+                  <th class="align-middle">品名記載事項変更</th>
+                  <td>
                     <div class="btn-group">
                       <input type="radio" class="btn-check" name="changeItemDesc" id="changeItemDesc1" autocomplete="on">
                       <label for="changeItemDesc1" class="btn btn-outline-secondary">1:お見積番号記載</label>
@@ -79,9 +78,8 @@
                   </td>
                 </tr>
                 <tr>
-                  <td class="border col-md-2 align-middle">消費税入力</td>
-                  <td class="border-top border-end border-bottom col-md-2">&nbsp;</td>
-                  <td class="col-md-8">
+                  <th class="align-middle">消費税入力</th>
+                  <td>
                     <div class="btn-group">
                       <input type="radio" class="btn-check" name="salesTaxEntry" id="salesTaxEntryOn" autocomplete="on">
                       <label for="salesTaxEntryOn" class="btn btn-outline-secondary">1:有</label>
@@ -91,164 +89,84 @@
                   </td>
                 </tr>
                 <tr>
-                  <td class="border col-md-2 align-middle">消費税加筆事項</td>
-                  <td class="border-top border-end border-bottom col-md-2">&nbsp;</td>
-                  <td class="col-md-8">
+                  <th class="align-middle">消費税加筆事項</th>
+                  <td>
                     <div class="btn-group">
                       <input type="radio" class="btn-check" name="salesTaxAdditions" id="salesTaxAdditionsOn" autocomplete="on">
                       <label for="salesTaxAdditionsOn" class="btn btn-outline-secondary">1:有</label>
                       <input type="radio" class="btn-check" name="salesTaxAdditions" id="salesTaxAdditionsOff" autocomplete="off">
                       <label for="salesTaxAdditionsOff" class="btn btn-outline-secondary">2:無</label>
-                    </div>
-                    　※本金額には、消費税は含まれておりません。請求時には、消費税相当額を加算させて頂きます。
+                    </div>　※本金額には、消費税は含まれておりません。請求時には、消費税相当額を加算させて頂きます。
                   </td>
                 </tr>
-              </table>              
+              </table>
             </div>
   
             <!-- 請求書スタイル設定 -->
             <div class="mt-5">
-              <div class="h5">請求書スタイル設定</div>
+              <div class="h5">納品書スタイル設定</div>
               <table class="table table-borderless">
                 <tr>
-                  <td class="border col-md-2 align-middle">窓付封書の選択</td>
-                  <td class="border-top border-end border-bottom col-md-2">&nbsp;</td>
-                  <td class="col-md-8">
+                  <th class="align-middle" style="width: 12rem;">窓付封書の選択</th>
+                  <td>
                     客先(契約先)　住所記載　
                     <div class="btn-group">
-                      <input type="radio" class="btn-check" name="windowsSealedEnvelope" id="windowsSealedEnvelopeOn" autocomplete="on">
-                      <label for="windowsSealedEnvelopeOn" class="btn btn-outline-secondary">1:有</label>
-                      <input type="radio" class="btn-check" name="windowsSealedEnvelope" id="windowsSealedEnvelopeOff" autocomplete="off">
-                      <label for="windowsSealedEnvelopeOff" class="btn btn-outline-secondary">2:無</label>
+                      <input type="radio" class="btn-check" name="_windowsSealedEnvelope" id="_windowsSealedEnvelopeOn" autocomplete="on">
+                      <label for="_windowsSealedEnvelopeOn" class="btn btn-outline-secondary">1:有</label>
+                      <input type="radio" class="btn-check" name="_windowsSealedEnvelope" id="_windowsSealedEnvelopeOff" autocomplete="off">
+                      <label for="_windowsSealedEnvelopeOff" class="btn btn-outline-secondary">2:無</label>
                     </div>
                   </td>
                 </tr>
                 <tr>
-                  <td class="border col-md-2 align-middle">品名記載事項変更</td>
-                  <td class="border-top border-end border-bottom col-md-2">&nbsp;</td>
-                  <td class="col-md-8">
+                  <th class="align-middle" style="width: 12rem;">品名記載事項変更</th>
+                  <td>
                     <div class="btn-group">
-                      <input type="radio" class="btn-check" name="changeItemDesc" id="changeItemDesc1" autocomplete="on">
-                      <label for="changeItemDesc1" class="btn btn-outline-secondary">1:お見積番号記載</label>
-                      <input type="radio" class="btn-check" name="changeItemDesc" id="changeItemDesc2" autocomplete="off">
-                      <label for="changeItemDesc2" class="btn btn-outline-secondary">2:詳細参照</label>
-                      <input type="radio" class="btn-check" name="changeItemDesc" id="changeItemDesc3" autocomplete="off">
-                      <label for="changeItemDesc3" class="btn btn-outline-secondary">3:記載なし</label>
-                      <input type="radio" class="btn-check" name="changeItemDesc" id="changeItemDesc4" autocomplete="off">
-                      <label for="changeItemDesc4" class="btn btn-outline-secondary">4:明細事項記載(一括請求時のみ)</label>
+                      <input type="radio" class="btn-check" name="_changeItemDesc" id="_changeItemDesc1" autocomplete="on">
+                      <label for="_changeItemDesc1" class="btn btn-outline-secondary">1:お見積番号記載</label>
+                      <input type="radio" class="btn-check" name="_changeItemDesc" id="_changeItemDesc2" autocomplete="off">
+                      <label for="_changeItemDesc2" class="btn btn-outline-secondary">2:詳細参照</label>
+                      <input type="radio" class="btn-check" name="_changeItemDesc" id="_changeItemDesc3" autocomplete="off">
+                      <label for="_changeItemDesc3" class="btn btn-outline-secondary">3:記載なし</label>
+                      <input type="radio" class="btn-check" name="_changeItemDesc" id="_changeItemDesc4" autocomplete="off">
+                      <label for="_changeItemDesc4" class="btn btn-outline-secondary">4:明細事項記載(一括請求時のみ)</label>
                     </div>
                   </td>
                 </tr>
                 <tr>
-                  <td class="border col-md-2 align-middle">消費税入力</td>
-                  <td class="border-top border-end border-bottom col-md-2">&nbsp;</td>
-                  <td class="col-md-8">
+                  <th class="align-middle" style="width: 12rem;">消費税入力</th>
+                  <td>
                     <div class="btn-group">
-                      <input type="radio" class="btn-check" name="salesTaxEntry" id="salesTaxEntryOn" autocomplete="on">
-                      <label for="salesTaxEntryOn" class="btn btn-outline-secondary">1:有</label>
-                      <input type="radio" class="btn-check" name="salesTaxEntry" id="salesTaxEntryOff" autocomplete="off">
-                      <label for="salesTaxEntryOff" class="btn btn-outline-secondary">2:無</label>
+                      <input type="radio" class="btn-check" name="_salesTaxEntry" id="_salesTaxEntryOn" autocomplete="on">
+                      <label for="_salesTaxEntryOn" class="btn btn-outline-secondary">1:有</label>
+                      <input type="radio" class="btn-check" name="_salesTaxEntry" id="_salesTaxEntryOff" autocomplete="off">
+                      <label for="_salesTaxEntryOff" class="btn btn-outline-secondary">2:無</label>
                     </div>
                   </td>
                 </tr>
                 <tr>
-                  <td class="border col-md-2 align-middle">消費税加筆事項</td>
-                  <td class="border-top border-end border-bottom col-md-2">&nbsp;</td>
-                  <td class="col-md-8">
+                  <th class="align-middle" style="width: 12rem;">消費税加筆事項</th>
+                  <td>
                     <div class="btn-group">
-                      <input type="radio" class="btn-check" name="salesTaxAdditions" id="salesTaxAdditionsOn" autocomplete="on">
-                      <label for="salesTaxAdditionsOn" class="btn btn-outline-secondary">1:有</label>
-                      <input type="radio" class="btn-check" name="salesTaxAdditions" id="salesTaxAdditionsOff" autocomplete="off">
-                      <label for="salesTaxAdditionsOff" class="btn btn-outline-secondary">2:無</label>
-                    </div>
-                    　※本金額には、消費税は含まれておりません。請求時には、消費税相当額を加算させて頂きます。
+                      <input type="radio" class="btn-check" name="_salesTaxAdditions" id="_salesTaxAdditionsOn" autocomplete="on">
+                      <label for="_salesTaxAdditionsOn" class="btn btn-outline-secondary">1:有</label>
+                      <input type="radio" class="btn-check" name="_salesTaxAdditions" id="_salesTaxAdditionsOff" autocomplete="off">
+                      <label for="_salesTaxAdditionsOff" class="btn btn-outline-secondary">2:無</label>
+                    </div>　※本金額には、消費税は含まれておりません。請求時には、消費税相当額を加算させて頂きます。
                   </td>
                 </tr>
               </table>
-              <!--
-              <div>
-                <div class="row">
-                  <div class="col-sm-4">
-                    <div class="row">
-                      <div class="col-sm-6 border">窓付封書の選択</div>
-                      <div class="col-sm-6 border"></div>
-                    </div>
-                  </div>
-                  <div class="col-sm-8">
-                    客先(契約先)　住所記載
-                    <div class="btn-group">
-                      <input type="radio" class="btn-check" name="windowsSealedEnvelope" id="windowsSealedEnvelopeOn" autocomplete="on">
-                      <label for="windowsSealedEnvelopeOn" class="btn btn-outline-secondary">1:有</label>
-                      <input type="radio" class="btn-check" name="windowsSealedEnvelope" id="windowsSealedEnvelopeOff" autocomplete="off">
-                      <label for="windowsSealedEnvelopeOff" class="btn btn-outline-secondary">2:無</label>
-                    </div>
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="col-sm-4">
-                    <div class="row">
-                      <div class="col-sm-6 border">品名記載事項変更</div>
-                      <div class="col-sm-6 border"></div>
-                    </div>
-                  </div>
-                  <div class="col-sm-8">
-                    <div class="btn-group">
-                      <input type="radio" class="btn-check" name="changeItemDesc" id="changeItemDesc1" autocomplete="on">
-                      <label for="changeItemDesc1" class="btn btn-outline-secondary">1:お見積番号記載</label>
-                      <input type="radio" class="btn-check" name="changeItemDesc" id="changeItemDesc2" autocomplete="off">
-                      <label for="changeItemDesc2" class="btn btn-outline-secondary">2:詳細参照</label>
-                      <input type="radio" class="btn-check" name="changeItemDesc" id="changeItemDesc3" autocomplete="off">
-                      <label for="changeItemDesc3" class="btn btn-outline-secondary">3:記載なし</label>
-                      <input type="radio" class="btn-check" name="changeItemDesc" id="changeItemDesc4" autocomplete="off">
-                      <label for="changeItemDesc4" class="btn btn-outline-secondary">4:明細事項記載(一括請求時のみ)</label>
-                    </div>
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="col-sm-4">
-                    <div class="row">
-                      <div class="col-sm-6 border">消費税入力</div>
-                      <div class="col-sm-6 border"></div>
-                    </div>
-                  </div>
-                  <div class="col-sm-8">
-                    <div class="btn-group">
-                      <input type="radio" class="btn-check" name="salesTaxEntry" id="salesTaxEntryOn" autocomplete="on">
-                      <label for="salesTaxEntryOn" class="btn btn-outline-secondary">1:有</label>
-                      <input type="radio" class="btn-check" name="salesTaxEntry" id="salesTaxEntryOff" autocomplete="off">
-                      <label for="salesTaxEntryOff" class="btn btn-outline-secondary">2:無</label>
-                    </div>
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="col-sm-4">
-                    <div class="row">
-                      <div class="col-sm-6 border">消費税加筆事項</div>
-                      <div class="col-sm-6 border"></div>
-                    </div>
-                  </div>
-                  <div class="col-sm-8">
-                    <div class="btn-group">
-                      <input type="radio" class="btn-check" name="salesTaxAdditions" id="salesTaxAdditionsOn" autocomplete="on">
-                      <label for="salesTaxAdditionsOn" class="btn btn-outline-secondary">1:有</label>
-                      <input type="radio" class="btn-check" name="salesTaxAdditions" id="salesTaxAdditionsOff" autocomplete="off">
-                      <label for="salesTaxAdditionsOff" class="btn btn-outline-secondary">2:無</label>
-                    </div>
-                  </div>
-                </div>
-              </div>-->
-            </div>
 
             <hr class="my-4">
-            <table class="table table-striped table-bordered">
-              <thead>
-                <th class="text-center">選択</th>
-                <th class="text-center">取引銀行名</th>
-                <th class="text-center">支店名</th>
-                <th class="text-center">種目</th>
-                <th class="text-center">口座名義名</th>
-                <th class="text-center">口座番号</th>
-                <th class="text-center">&nbsp;</th>
+            <table class="table border-top border-start border-end" id="result-table">
+              <thead class="table-light">
+                <th class="">選択</th>
+                <th class="">取引銀行名</th>
+                <th class="">支店名</th>
+                <th class="">種目</th>
+                <th class="">口座名義名</th>
+                <th class="">口座番号</th>
+                <th class="">&nbsp;</th>
               </thead>
               <tbody>
                 <tr>
@@ -324,5 +242,13 @@
     </div>
   </main>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+  <script>
+    const radios = document.querySelectorAll('#result-table input');
+    radios.forEach(function(el) {
+      el.addEventListener('click', function() {
+        window.location.href = './003_invoices.html';
+      });
+    });
+  </script>
 </body>
 </html>
