--- a/003_invoices.html
+++ b/003_invoices.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>請求書・請求明細書作成</title>
+  <title>納品書・請求明細書作成</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
 <body>
@@ -26,22 +26,23 @@
     </div>
   </header>
   <main class="" style="background-color: lavenderblush;">
-    <h3 class="p-3 bg-white">請求書・請求明細書作成</h3>
+    <h3 class="p-3 bg-white">納品書・請求明細書作成</h3>
     <div class="container-fluid" style="">
       <div class="p-3 bg-white rounded">
         <div class="container" style="">
           <form>
-            <table class="table table-bordered">
+            <table class="table table-borderless">
               <tr>
-                <th class="col-md-2">部門</th>
-                <td class="col-md-2">4023</td>
-                <td class="col-md-4">ソリューション事業本部</td>
-                <td class="col-md-4">関東支店</td>
+                <th style="width: 12rem;">部門番号</th>
+                <td>4023</td>
               </tr>
               <tr>
-                <th class="col-md-2">担当者</th>
-                <td class="col-md-2">002021</td>
-                <td colspan="2">ヤマダタロウ</td>
+                <th style="width: 12rem;">部門名</th>
+                <td>ソリューション事業本部　関東支店</td>
+              </tr>
+              <tr>
+                <th style="width: 12rem;">担当者</th>
+                <td>002021　ヤマダタロウ</td>
               </tr>
             </table>
             <hr class="my-4">
