--- a/003_invoices.html
+++ b/003_invoices.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>納品書・請求明細書作成</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+  <link rel="stylesheet" href="./css/custom.min.css">
 </head>
 <body>
   <header class="p-3 text-white" style="background-color: mediumvioletred;">
@@ -20,7 +21,7 @@
           <li><a href="#" class="nav-link px-2 text-white">見積</a></li>
         </ul>
         <div class="text-end">
-          <button type="button" class="btn btn-outline-light me-2">account</button>
+          <button type="button" class="btn btn-outline-light me-2">ログアウト</button>
         </div>
       </div>
     </div>
@@ -28,8 +29,9 @@
   <main class="" style="background-color: lavenderblush;">
     <h3 class="p-3 bg-white">納品書・請求明細書作成</h3>
     <div class="container-fluid" style="">
-      <div class="p-3 bg-white rounded">
-        <div class="container" style="">
+      <div class="p-3 bg-white rounded panel">
+        <div class="panel__title">納品書・請求明細書作成</div>
+        <div class="container panel__container">
           <form>
             <table class="table table-borderless">
               <tr>
