画面名の修正

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <main>
     <a href="./001_order-search.html">受注検索</a><br>
-    <a href="./002_invoices.html">請求書・請求明細書作成</a><br>
+    <a href="./002_invoices.html">納品書・請求明細書作成</a><br>
     <a href="./004_quotation-search.html">見積検索</a><br>
     <a href="./005_quotation-ledger-inquiry.html">見積台帳照会</a><br>
   </main>
